--- a/css/styles.css
+++ b/css/styles.css
@@ -546,6 +546,241 @@ font-weight: 400;
         
 }
 
+.form {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+    justify-content: end;
+    align-items: end;
+}
+
+.form-label {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+}
+
+.foot-input {
+    font-family: inherit;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+    border: 1px solid #FFFFFF;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: transparent;
+    padding: 8px 16px;
+}
+
+.foot-input::placeholder {
+    color: #FFFFFF;
+}
+
+.foot-btn {
+    display: flex;
+    flex-direction: row;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+
+    border-radius: 4px;
+
+    width: 165px;
+    height: 40px;
+    background-color: #4D5AE5;
+    color: #FFFFFF;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
+
+
+.foot-btn:hover,
+.foot-btn:focus {
+    background-color: #404BBF;
+
+}
+
+.backdrop {
+    
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background-color: #2E2F4240;
+        z-index: 999;
+        opacity: 0;
+        pointer-events: none;
+        visibility: hidden;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition-property: opacity, visibility;
+
+}
+
+.backdrop.is-open {
+opacity: 1;
+    pointer-events: initial;
+    visibility: visible;
+}
+
+.modal {
+    width: 408px;
+    min-height: 584px;
+    background-color: #FCFCFC;
+        border-radius: 4px;
+        box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-70%);
+        padding: 24px;
+        opacity: 0;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition-property: opacity, transform;
+
+}
+.backdrop.is-open .modal {
+opacity: 1;
+transform: translateY(-50%) translateX(-50%)
+}
+
+
+.close-btn {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: #E7E9FC;
+    color: #2E2F42;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    padding: 0;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: background-color, color;
+
+}
+
+.icon-close {
+    color: currentColor;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    background-color: #404BBF;
+    color: white;
+}
+
+.modal-caption {
+    font-family: inherit;
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #2E2F42;
+        max-width: 360px;
+        margin-bottom: 16px;
+        margin-top: 48px;
+        text-align: center;
+}
+ 
+
+
+.modal-form-field {
+    margin-bottom: 8px;
+}
+
+.modal-form-label {
+    display: block;
+    margin-bottom: 4px;
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: #8E8F99;
+}
+
+.modal-form-wrapper {
+    position: relative;
+}
+
+.modal-input {
+    display: block;
+    width: 100%;
+    height: 40px;
+    border: 1px solid #2E2F4240;
+        border-radius: 4px; 
+        outline: none;
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        padding: 11px 38px;
+}
+
+.modal-area::placeholder {
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: #2E2F4240;
+}
+
+.modal-input:focus {
+border: 1px solid #4D5AE5;
+}
+
+.modal-area:focus {
+border: 1px solid #4D5AE5;
+}
+
+.modal-area {
+    display: block;
+        width: 100%;
+        height: 120px;
+        border: 1px solid #2E2F4240;
+        border-radius: 4px;
+        outline: none;
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        padding: 8px 16px;
+        resize: none;
+
+}
+
+
+.modal-form-icon {
+fill: #2E2F42;
+    position: absolute;
+    top: 50%;
+    left: 19px;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    pointer-events: none;
+
+}
+
+.modal-input:focus + .modal-form-icon {
+    fill: #404BBF;
+}
+
+.modal-input-check
+
 
 
 
