--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@ body {
     color: #434455;
 }
 
+body:has(.backdrop.is-open) {
+    overflow: hidden;
+}
+
 ul, ol {
     list-style-type: none;
     margin: 0;
@@ -779,8 +783,52 @@ fill: #2E2F42;
     fill: #404BBF;
 }
 
-.modal-input-check
+.accent-text {
+    color: #4D5AE5;
+    text-decoration: underline;
+        text-decoration-skip-ink: none;
+}
 
+.form-agreement {
+    margin-bottom: 24px;
+}
 
+.user-agreement {
+font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #8E8F99;
+}
+
+.check-agreement {
+    display: inline-flex;
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+        border: 1px solid #2E2F4240;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition-property: color, background-color, border-color;
+        color: transparent;
+        margin-right: 8px;
+}
+
+.modal-input-check:checked + .user-agreement > .check-agreement{
+background-color: #404BBF;
+border-color: #404BBF;
+color: #F4F4FD;
+}
+
+.check-agreement-icon {
+    fill: currentColor;
+}
+   
+.send {
+    display: block;
+    margin: 0 auto;
+}
 
 
