--- a/css/styles.css
+++ b/css/styles.css
@@ -627,7 +627,7 @@ font-weight: 400;
         left: 0;
         height: 100%;
         width: 100%;
-        background-color: #2E2F4240;
+        background-color: rgba(46, 47, 66, 0.4);
         z-index: 999;
         opacity: 0;
         pointer-events: none;
@@ -653,14 +653,13 @@ opacity: 1;
         top: 50%;
         left: 50%;
         transform: translateX(-50%) translateY(-70%);
-        padding: 24px;
+        padding: 72px 24px 24px 24px;
         opacity: 0;
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        transition-property: opacity, transform;
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
 
 }
 .backdrop.is-open .modal {
-opacity: 1;
 transform: translateY(-50%) translateX(-50%)
 }
 
@@ -671,7 +670,7 @@ transform: translateY(-50%) translateX(-50%)
     border-radius: 50%;
     background-color: #E7E9FC;
     color: #2E2F42;
-    border: none;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -679,19 +678,26 @@ transform: translateY(-50%) translateX(-50%)
     top: 24px;
     right: 24px;
     padding: 0;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition-property: background-color, color;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
 
 }
 
 .icon-close {
     color: currentColor;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-close:hover,
+.icon-close:focus {
+fill: #ffffff;
 }
 
 .close-btn:hover,
 .close-btn:focus {
     background-color: #404BBF;
     color: white;
+    border: none;
 }
 
 .modal-caption {
@@ -703,14 +709,13 @@ transform: translateY(-50%) translateX(-50%)
         color: #2E2F42;
         max-width: 360px;
         margin-bottom: 16px;
-        margin-top: 48px;
         text-align: center;
 }
  
 
 
 .modal-form-field {
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 
 .modal-form-label {
@@ -718,7 +723,7 @@ transform: translateY(-50%) translateX(-50%)
     margin-bottom: 4px;
     font-weight: 400;
         font-size: 12px;
-        line-height: 1.16667;
+        line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8E8F99;
 }
@@ -734,8 +739,21 @@ transform: translateY(-50%) translateX(-50%)
     border: 1px solid #2E2F4240;
         border-radius: 4px; 
         outline: none;
-        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         padding: 11px 38px;
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        background-color: transparent;
+        outline: transparent;
+}
+
+.modal-area {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    outline: transparent
 }
 
 .modal-area::placeholder {
@@ -772,7 +790,7 @@ border: 1px solid #4D5AE5;
 fill: #2E2F42;
     position: absolute;
     top: 50%;
-    left: 19px;
+    left: 16px;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     pointer-events: none;
@@ -780,7 +798,7 @@ fill: #2E2F42;
 }
 
 .modal-input:focus + .modal-form-icon {
-    fill: #404BBF;
+    fill: #4D5AE5;
 }
 
 .accent-text {
@@ -796,7 +814,7 @@ fill: #2E2F42;
 .user-agreement {
 font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8E8F99;
 }
@@ -806,20 +824,20 @@ font-weight: 400;
     width: 16px;
     height: 16px;
     border-radius: 2px;
-        border: 1px solid #2E2F4240;
+        border: 1px solid rgba(46, 47, 66, 0.4);
         justify-content: center;
         align-items: center;
         cursor: pointer;
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        transition-property: color, background-color, border-color;
-        color: transparent;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill cubic-bezier(0.4, 0, 0.2, 1), border cubic-bezier(0.4, 0, 0.2, 1);
+        
+        fill: transparent;
         margin-right: 8px;
 }
 
 .modal-input-check:checked + .user-agreement > .check-agreement{
 background-color: #404BBF;
-border-color: #404BBF;
-color: #F4F4FD;
+border: none;
+fill: #F4F4FD;
 }
 
 .check-agreement-icon {
