--- a/css/styles.css
+++ b/css/styles.css
@@ -550,6 +550,20 @@ font-weight: 400;
         
 }
 
+.subscribe {
+
+}
+
+.subscribe-p {
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+
+
 .form {
     display: flex;
     flex-direction: row;
@@ -581,9 +595,9 @@ font-weight: 400;
     border-radius: 4px;
     width: 264px;
     height: 40px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
     background-color: transparent;
-    padding: 8px 16px;
+    padding-left: 16px;
 }
 
 .foot-input::placeholder {
@@ -597,17 +611,18 @@ font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-
+    font-family: "Roboto", sans-serif;
     border-radius: 4px;
-
-    width: 165px;
+    cursor: pointer;
+    min-width: 165px;
     height: 40px;
     background-color: #4D5AE5;
     color: #FFFFFF;
     justify-content: center;
     align-items: center;
-    gap: 16px;
+    
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: none;
 }
 
 
@@ -617,6 +632,11 @@ font-weight: 400;
 .foot-btn:hover,
 .foot-btn:focus {
     background-color: #404BBF;
+
+}
+
+.sub {
+    margin-left: 16px;
 
 }
 
@@ -678,7 +698,7 @@ transform: translateY(-50%) translateX(-50%)
     top: 24px;
     right: 24px;
     padding: 0;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
 
 }
@@ -694,7 +714,7 @@ fill: #ffffff;
 }
 
 .close-btn:hover,
-.close-btn:focus {
+.close-btn:focus > .icon-close {
     background-color: #404BBF;
     color: white;
     border: none;
@@ -716,6 +736,10 @@ fill: #ffffff;
 
 .modal-form-field {
     margin-bottom: 16px;
+}
+
+.name {
+    margin-bottom: 8px;
 }
 
 .modal-form-label {
@@ -746,15 +770,7 @@ fill: #ffffff;
         outline: transparent;
 }
 
-.modal-area {
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: rgba(46, 47, 66, 0.4);
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    background-color: transparent;
-    outline: transparent
-}
+
 
 .modal-area::placeholder {
     font-weight: 400;
@@ -776,10 +792,16 @@ border: 1px solid #4D5AE5;
     display: block;
         width: 100%;
         height: 120px;
-        border: 1px solid #2E2F4240;
+        font-size: 12px;
+            line-height: 1.17;
+            letter-spacing: 0.04em;
+            color: rgba(46, 47, 66, 0.4);
+        border: 1px solid rgba(46, 47, 66, 0.4);
         border-radius: 4px;
-        outline: none;
-        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        background-color: transparent;
+            outline: transparent;
+       
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         padding: 8px 16px;
         resize: none;
 
@@ -828,7 +850,7 @@ font-weight: 400;
         justify-content: center;
         align-items: center;
         cursor: pointer;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill cubic-bezier(0.4, 0, 0.2, 1), border cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
         
         fill: transparent;
         margin-right: 8px;
