--- a/css/styles.css
+++ b/css/styles.css
@@ -674,13 +674,14 @@ opacity: 1;
         left: 50%;
         transform: translateX(-50%) translateY(-70%);
         padding: 72px 24px 24px 24px;
-        opacity: 0;
+        
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         
 
 }
 .backdrop.is-open .modal {
-transform: translateY(-50%) translateX(-50%)
+transform: translateY(-50%) translateX(-50%);
+
 }
 
 
